# spacetime-renderer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/modules/: FindGLFW3.cmake
include/: apple_math.h  calculations.hpp  unit.hpp
include/bridges/: glfw.h  glfw.hpp
include/objects/: cube.h  object.h  object.hpp  shapes.hpp  vertices.hpp
include/objects/primitives/: cube.h  data.h  object.h  object.hpp  object_i.h  object_i.hpp  square.hpp  triangle.hpp
include/renderer/: camera.h  camera.hpp  color.h  engine.h  engine.hpp  gpu_buffers.h  gpu_buffers.hpp  texture.h  texture.hpp
include/units/: unit.hpp  wavelength.hpp
shaders/: cube.metal  triangle.metal  vertex_fragment.metal
src/: apple_math.cpp  calculations.cpp  main.cpp  package_implementation.cpp  unit.cpp
src/bridges/: glfw.mm
src/objects/: cube.cpp  object.cpp
src/objects/primitives/: cube.cpp  object.cpp  object_i.cpp  square.cpp  triangle.cpp
src/renderer/: camera.cpp  engine.cpp  texture.cpp
src/units/: unit.cpp  wavelength.cpp
